fix bug when skill list didn't align with grid settings

--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -6,18 +6,18 @@
 #technologies figcaption {
   color: var(--light-text);
   font-size: .75rem;
-  text-align: center;
+  margin-top: var(--space-small);
 }
 
-#technologies figure{
+#technologies .figure{
   display: inline-block;
 }
 
 #technologies .list {
   margin-top: 15px;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 1rem;
-  row-gap: 1rem;
+  column-gap: 2rem;
+  row-gap: 2rem;
 }
 
 @media screen and (max-width: 320px){
